--- a/src/pages/blog/series/[tag]/[page].astro
+++ b/src/pages/blog/series/[tag]/[page].astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "../../../../layouts/Layout.astro";
+import Layout from "../../../../layouts/BaseLayout.astro";
 import NavCard from "../../../../components/NavCard.astro";
 import PageNav from "../../../../components/PageNav.astro";
 
