--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,39 +1,32 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import Layout from "../layouts/BaseLayout.astro";
 const title = "Welcome!";
 const description = "A description for my home page";
 ---
 
 <Layout title={title} description={description}>
   <img src="/img/portrait.jpg" />
-  <p class="focus">
-    Hi, I'm Rohan, and this is my personal website and&nbsp;blog!
-  </p>
+  <p class="focus">Hi, I'm Rohan, and this is my personal website and&nbsp;blog!</p>
   <h2>What's Here?</h2>
   <h3>A Blog</h3>
   <p>
-    I've been using this space to share and reflect on my own experiences, for
-    example:
+    I've been using this space to share and reflect on my own experiences, for example:
     <ul>
       <li>
-        <a href="/blog/series/spiritual experiences/1"
-          >my spiritual experiences
-        </a>
+        <a href="/blog/series/spiritual experiences/1">my spiritual experiences</a>
       </li><li>
-        <a href="/blog/series/reading the bible/1"
-          >my experiences of reading the Bible
-        </a>
+        <a href="/blog/series/reading the bible/1">my experiences of reading the Bible</a>
       </li>
     </ul>
-    The posts are organised into series, and I'd encourage you to read them in order
-    as a series, rather than starting with the latest&nbsp;one.
+    The posts are organised into series, and I'd encourage you to read them in order as a series,
+    rather than starting with the latest&nbsp;one.
   </p>
   <h3>Web Experiments</h3>
   <p>
-    I've also been learning web development for fun since early 2022, so this is
-    an opportunity for me to play around and try some things. I'm hoping to add
-    different features over time (e.g. an RSS feed so you can subscribe to
-    updates if you're so&nbsp;inclined).
+    I've also been learning web development for fun since early 2022, so this is an
+    opportunity for me to play around and try some things. I'm hoping to add different
+    features over time (e.g. an RSS feed so you can subscribe to updates if you're
+    so&nbsp;inclined).
   </p>
   <h3>Under Construction</h3>
   <p>
