--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,61 +1,58 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import Layout from "../layouts/BaseLayout.astro";
 const title = "About Me";
 const description = "A page that tells you all about Rohan Nelson";
 ---
 
 <Layout title={title} description={description}>
-    <p>Here's some random things about me!</p>
-    <ul>
-        <li>
-            <strong
-                >I graduated from a Bachelor of Music (Jazz Performance) in
-                2011.</strong
-            > My first love is electric bass, but I can also play double bass, piano,
-            and guitar (to varying degrees of competency).
-        </li>
-        <li>
-            <strong
-                >I'm a Christian, and I feel called to a teaching ministry
-                within the church.</strong
-            > I've never been 100% sure what following this calling looks like in
-            practice, but so far I've engaged in volunteer ministry and held two
-            paid pastoral roles where I've been working with youth or children (amongst
-            other things).
-        </li>
-        <li>
-            <strong>I graduated from a Master of Divinity in 2018.</strong> I've
-            also had one journal article published so far, and would be keen to do
-            a PhD when the time is right!
-        </li>
-        <li>
-            <strong>I love languages!</strong> I've really enjoyed learning biblical
-            Greek and Hebrew, and have tried to keep my knowledge of these languages
-            alive. I've also completed half a Latin text-book, dabbled in German,
-            and can say "I am a coconut" in about ten different languages :P.
-        </li>
-        <li>
-            <strong>I'm currently studying counselling.</strong> There's a story
-            behind why I'm doing this, but I'm also interested in the relationship
-            between theology and psychology!
-        </li>
-        <li>
-            <strong>I'm a father of two, and a husband of one!</strong> Nothing has
-            changed my life quite as radically as getting married and having children.
-            It's not every day that you commit to someone for life, or embark on
-            a series of projects that take at least eighteen years each before they're
-            ready to fly the nest :).
-        </li>
-    </ul>
-    <h2>And A Little More About This Site</h2>
-    <p>
-        It's built using the framework <a
-            href="https://astro.build/"
-            target="blank">Astro</a
-        >, plus straight HTML, CSS, and vanilla JavaScript. I might learn a
-        JavaScript framework one day (probably <a
-            href="https://svelte.dev"
-            target="blank">Svelte</a
-        >), but in the meantime things are gonna stay nice and simple :).
-    </p>
+  <p>Here's some random things about me!</p>
+  <ul>
+    <li>
+      <strong
+        >I graduated from a Bachelor of Music (Jazz Performance) in 2011.</strong
+      > My first love is electric bass, but I can also play double bass, piano, and
+      guitar (to varying degrees of competency).
+    </li>
+    <li>
+      <strong
+        >I'm a Christian, and I feel called to a teaching ministry within the
+        church.</strong
+      > I've never been 100% sure what following this calling looks like in practice,
+      but so far I've engaged in volunteer ministry and held two paid pastoral roles
+      where I've been working with youth or children (amongst other things).
+    </li>
+    <li>
+      <strong>I graduated from a Master of Divinity in 2018.</strong> I've also had
+      one journal article published so far, and would be keen to do a PhD when the
+      time is right!
+    </li>
+    <li>
+      <strong>I love languages!</strong> I've really enjoyed learning biblical Greek
+      and Hebrew, and have tried to keep my knowledge of these languages alive. I've
+      also completed half a Latin text-book, dabbled in German, and can say "I am
+      a coconut" in about ten different languages :P.
+    </li>
+    <li>
+      <strong>I'm currently studying counselling.</strong> There's a story behind
+      why I'm doing this, but I'm also interested in the relationship between theology
+      and psychology!
+    </li>
+    <li>
+      <strong>I'm a father of two, and a husband of one!</strong> Nothing has changed
+      my life quite as radically as getting married and having children. It's not
+      every day that you commit to someone for life, or embark on a series of projects
+      that take at least eighteen years each before they're ready to fly the nest
+      :).
+    </li>
+  </ul>
+  <h2>And A Little More About This Site</h2>
+  <p>
+    It's built using the framework <a href="https://astro.build/" target="blank"
+      >Astro</a
+    >, plus straight HTML, CSS, and vanilla JavaScript. I might learn a
+    JavaScript framework one day (probably <a
+      href="https://svelte.dev"
+      target="blank">Svelte</a
+    >), but in the meantime things are gonna stay nice and simple :).
+  </p>
 </Layout>
