--- a/src/pages/blog/[page].astro
+++ b/src/pages/blog/[page].astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "../../layouts/Layout.astro";
+import Layout from "../../layouts/BaseLayout.astro";
 import NavCard from "../../components/NavCard.astro";
 import Tags from "../../components/Tags.astro";
 import PageNav from "../../components/PageNav.astro";
