--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../layouts/BaseLayout.astro";
 import Grid from "../components/Grid.astro";
-import Quill from "../components/icons/Quill.astro";
+import Icon from "astro-icon";
 const title = "Welcome!";
 const description = "A description for my home page";
 ---
@@ -11,7 +11,7 @@ const description = "A description for my home page";
     <p class="focus">
       Hi, I'm <strong>Rohan</strong>, and this is&nbsp;my personal website and&nbsp;blog!
     </p>
-    <img src="/img/portrait.jpg" />
+    <img class="profile" src="/img/portrait.jpg" />
   </div>
   <h2>What's Here?</h2>
   <Grid>
@@ -19,7 +19,7 @@ const description = "A description for my home page";
       <div class="card-header-wrapper">
         <h2>A Blog</h2>
         <div class="icon-wrapper">
-          <Quill iconColour="white" />
+          <Icon name="quill" fill="white" />
         </div>
       </div>
       <div class="inner-card">
@@ -41,7 +41,12 @@ const description = "A description for my home page";
       </div>
     </div>
     <div class="card-wrapper">
-      <h2>Web Experiments</h2>
+      <div class="card-header-wrapper">
+        <h2>Web Experiments</h2>
+        <div class="icon-wrapper">
+          <Icon name="code" fill="white" />
+        </div>
+      </div>
       <div class="inner-card">
         <p>
           I've also been learning web development for fun since early 2022, so this is an
@@ -62,7 +67,7 @@ const description = "A description for my home page";
   div.wrapper {
     display: flex;
   }
-  img {
+  img.profile {
     flex-basis: 160px;
     max-width: 29vw;
     width: 100%;
@@ -129,5 +134,10 @@ const description = "A description for my home page";
   }
   ul {
     padding-left: 0;
+  }
+  [astro-icon] {
+    height: 80px;
+    width: 100%;
+    margin: 20px 20px 10px 20px;
   }
 </style>
