Made grid component responsive

--- a/src/components/Grid.astro
+++ b/src/components/Grid.astro
@@ -10,4 +10,9 @@
     grid-template-columns: 1fr 1fr;
     gap: 20px;
   }
+  @media (max-width: calc(639rem / 16)) {
+    div {
+      grid-template-columns: 1fr;
+    }
+  }
 </style>
