Home page essentially finished except for fine-tuning text spacing etc.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -48,6 +48,7 @@
     justify-content: center;
     font-size: var(--font-size);
     transition: var(--transition-speed);
+    z-index: 10;
   }
   div.header-trigger {
     height: calc(120rem / 16);
