--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ const description = "A description for my home page";
       <div class="card-header-wrapper">
         <div class="flex-column">
           <h2>A Blog</h2>
-          <a href="/blog">Read blog</a>
+          <a href="/blog/1">Read blog</a>
         </div>
         <div class="icon-wrapper">
           <Icon name="quill" fill="white" />
@@ -63,12 +63,12 @@ const description = "A description for my home page";
       </div>
     </div>
   </Grid>
+  <h3>Under Construction</h3>
+  <p>
+    This site is currently under construction, so please bear with the various
+    unfinished&nbsp;bits.
+  </p>
 </Layout>
-<h3>Under Construction</h3>
-<p>
-  This site is currently under construction, so please bear with the various
-  unfinished&nbsp;bits.
-</p>
 
 <style>
   div.wrapper {
