--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,7 @@
 ---
 import Header from "../components/Header.astro";
 import Title from "../components/Title.astro";
+import Footer from "../components/Footer.astro";
 import GoogleAnalytics from "../components/GoogleAnalytics.astro";
 export interface Props {
   title: string;
@@ -40,6 +41,7 @@ const pageDescription = description ?? frontmatter.description;
         <slot />
       </div>
     </main>
+    <Footer />
     <style is:global>
       /*SITE-WIDE STYLES*/
       * {
@@ -85,7 +87,7 @@ const pageDescription = description ?? frontmatter.description;
       }
       /*COLOUR GRADIENT VARIABLES*/
       :root {
-        --grey-gradient: linear-gradient(90deg, var(--dark-grey), 43%, var(--light-grey));
+        --grey-gradient: linear-gradient(90deg, var(--light-grey), 43%, var(--dark-grey));
         --red-gradient: linear-gradient(90deg, var(--dark-red), 43%, var(--light-red));
         --red-gradient-diagonal: linear-gradient(
           55deg,
