--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,13 +7,13 @@ const description = "A description for my home page";
 ---
 
 <Layout title={title} description={description}>
-  <div class="wrapper">
+  <div class="wrapper text-padding">
     <p class="focus">
       Hi, I'm <strong>Rohan</strong>, and this is&nbsp;my personal website and&nbsp;blog!
     </p>
     <img class="profile" src="/img/portrait.jpg" />
   </div>
-  <h2>What's Here?</h2>
+  <h2 class="text-padding">What's Here?</h2>
   <Grid>
     <div class="card-wrapper">
       <div class="card-header-wrapper">
@@ -63,8 +63,8 @@ const description = "A description for my home page";
       </div>
     </div>
   </Grid>
-  <h3>Under Construction</h3>
-  <p>
+  <h3 class="text-padding">Under Construction</h3>
+  <p class="text-padding">
     This site is currently under construction, so please bear with the various
     unfinished&nbsp;bits.
   </p>
@@ -163,5 +163,8 @@ const description = "A description for my home page";
     height: 80px;
     width: 100%;
     margin: 20px 20px 0 20px;
+  }
+  .text-padding {
+    padding-left: 10px;
   }
 </style>
