--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -174,7 +174,7 @@ const pageDescription = description ?? frontmatter.description;
       a {
         color: var(--light-red);
       }
-      a.tag {
+      a.series {
         text-decoration: none;
         color: black;
         padding: 0.25rem 0.5rem;
@@ -184,8 +184,8 @@ const pageDescription = description ?? frontmatter.description;
         font-style: italic;
         display: inline-block;
       }
-      a.tag:focus,
-      a.tag:hover {
+      a.series:focus,
+      a.series:hover {
         transform: scale(106%);
       }
       li {
