--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -2,6 +2,7 @@
 import Layout from "./BaseLayout.astro";
 import NavCard from "../components/NavCard.astro";
 import Metadata from "../components/Metadata.astro";
+import { Icon } from "astro-icon";
 const { frontmatter } = Astro.props;
 const allBlogs = await Astro.glob("../pages/blog/*.mdx");
 let previousBlogObj: any = {};
@@ -12,12 +13,9 @@ allBlogs.forEach((blog, i) => {
     nextBlogObj = allBlogs[i + 1];
   }
 });
-let filteredBlogs = [];
-const uniqueSeries = [...new Set(frontmatter.series)];
-uniqueSeries.forEach((series) => {
-  filteredBlogs = allBlogs.filter((blog) => {
-    return blog.frontmatter.series.includes(series);
-  });
+const series = frontmatter.series;
+const filteredBlogs = allBlogs.filter((blog) => {
+  return blog.frontmatter.series.includes(series);
 });
 let nextInSeries: any = {};
 let previousInSeries: any = {};
@@ -27,12 +25,27 @@ filteredBlogs.forEach((blog, i) => {
     nextInSeries = filteredBlogs[i + 1];
   }
 });
+const seriesPages = await Astro.glob("../components/series/*.mdx");
+const seriesPage = seriesPages.filter((page) =>
+  page.frontmatter.series?.includes(series)
+);
+const { seriesColour } = seriesPage[0].frontmatter;
+const seriesColourStylesheet = `var(--light-${seriesColour})`;
 ---
 
-<Layout title={frontmatter.title} description={frontmatter.description}>
-  <Metadata frontmatter={frontmatter} />
-  <img src={frontmatter.image ?? "/img/blog.svg"} />
-  <slot />
+<Layout
+  title={frontmatter.title}
+  description={frontmatter.description}
+  pubDate={frontmatter.pubDate}
+>
+  <Metadata frontmatter={frontmatter} {seriesColour} />
+  <Icon
+    name={frontmatter.image ?? "/img/blog.svg"}
+    fill={`var(--light-${seriesColour})`}
+  />
+  <div class="blog">
+    <slot />
+  </div>
   <hr />
   <ul>
     {nextInSeries && <NavCard post={nextInSeries} titlePrefix="Next in Series: " />}
@@ -54,8 +67,8 @@ filteredBlogs.forEach((blog, i) => {
       )
     }
   </ul>
-  <style>
-    img {
+  <style define:vars={{ seriesColourStylesheet }}>
+    [astro-icon] {
       width: 200px;
       max-width: 30vw;
       height: auto;
@@ -66,6 +79,22 @@ filteredBlogs.forEach((blog, i) => {
       display: flex;
       padding: 0;
       flex-direction: column;
+    }
+    div.blog {
+      margin-top: 2rem;
+    }
+    :global(div.blog > p:first-child:first-letter) {
+      color: var(--seriesColourStylesheet);
+      float: left;
+      font-size: 92px;
+      line-height: 92px;
+      padding-top: 6px;
+      padding-right: 3px;
+      font-weight: 700;
+    }
+    :global(div.blog p:first-child:first-line) {
+      color: var(--seriesColourStylesheet);
+      font-weight: 700;
     }
   </style>
 </Layout>
