--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -134,9 +134,14 @@ const description = "A description for my home page";
     font-size: var(--font-size-h4);
     line-height: var(--line-height-h4);
     font-weight: 700;
-    padding: 5px 12px;
+    padding: 3px 10px;
     align-self: flex-start;
     margin-top: auto;
+    border: 3px solid white;
+  }
+  .card-header-wrapper a:hover {
+    background: none;
+    color: white;
   }
   div.flex-column {
     display: flex;
